--- a/templates/s.html
+++ b/templates/s.html
@@ -222,7 +222,9 @@
     });
 
     // Save to Flask
-    await fetch("http://127.0.0.1:5000/save_answers", {
+  //  await fetch("http://127.0.0.1:5000/save_answers", {
+     await fetch("https://medirendor.onrender.com/save_answers", {
+       
       method:"POST",
       headers:{"Content-Type":"application/json"},
       body:JSON.stringify({
@@ -260,4 +262,5 @@
 
 </body>
 </html>
+
 
