--- a/templates/dermatology-doctor.html
+++ b/templates/dermatology-doctor.html
@@ -63,7 +63,8 @@ function showNotification(msg) {
 }
 
 function loadAppointments() {
-    fetch(`http://127.0.0.1:5000/get_appointments/${DOCTOR_DEPARTMENT}`)
+  //  fetch(`http://127.0.0.1:5000/get_appointments/${DOCTOR_DEPARTMENT}`)
+      fetch(`https://medirendor.onrender.com/get_appointments/${DOCTOR_DEPARTMENT}`)
         .then(res => res.json())
         .then(data => {
 
@@ -136,3 +137,4 @@ document.getElementById("logoutBtn").onclick = () => window.location.href = "log
 
 </body>
 </html>
+
